--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "desktop": "electron main.js",
+    "desktop": "electron desktop.js",
     "server": "node server.js"
   },
   "repository": {
