--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "desktop": "electron desktop.js",
-    "server": "node server.js"
+    "server": "node server.js",
+    "batch": "electron batch.js"
   },
   "repository": {
     "type": "git",
